--- a/packages/polling/package.json
+++ b/packages/polling/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/luminojs/lumino.git"
+    "url": "https://github.com/jupyterlab/lumino.git"
   },
   "license": "BSD-3-Clause",
   "author": "A. T. Darian <git@darian.af>",
