--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -2,9 +2,9 @@
   "name": "@lumino/datagrid",
   "version": "0.5.3",
   "description": "Lumino Tabular Data Grid",
-  "homepage": "https://github.com/jupyterlabab/lumino",
+  "homepage": "https://github.com/jupyterlab/lumino",
   "bugs": {
-    "url": "https://github.com/jupyterlabab/lumino/issues"
+    "url": "https://github.com/jupyterlab/lumino/issues"
   },
   "license": "BSD-3-Clause",
   "author": "S. Chris Colbert <sccolbert@gmail.com>",
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jupyterlabab/lumino.git"
+    "url": "https://github.com/jupyterlab/lumino.git"
   },
   "scripts": {
     "api": "api-extractor run --local --verbose",
