--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -22,7 +22,6 @@
     "dist/*",
     "src/*",
     "types/*",
-    "types-3.4/*",
     "style/*.css"
   ],
   "main": "dist/index.js",
@@ -30,20 +29,12 @@
   "unpkg": "dist/index.min.js",
   "jsdelivr": "dist/index.min.js",
   "types": "types/index.d.ts",
-  "typesVersions": {
-    "<3.8": {
-      "*": [
-        "types-3.4/index.d.ts"
-      ]
-    }
-  },
   "style": "style/index.css",
   "scripts": {
     "api": "api-extractor run --local --verbose",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
-    "build": "tsc --build && npm run gen-legacy-types && rollup -c",
+    "build": "tsc --build && rollup -c",
     "build:test": "tsc --build tests && cd tests && webpack",
-    "gen-legacy-types": "downlevel-dts ./types ./types-3.4",
     "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
     "clean:test": "rimraf tests/build",
     "docs": "typedoc --options tdoptions.json src",
@@ -97,8 +88,8 @@
     "style-loader": "^1.0.2",
     "terser": "^4.6.2",
     "tslib": "1.10.0",
-    "typedoc": "~0.17.7",
-    "typescript": "~3.9.2",
+    "typedoc": "~0.15.0",
+    "typescript": "~3.6.4",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10"
   },
