Specify the CSS javascript module imports explicitly in package.json.
This styleModule key is the convention we are adopting in JupyterLab for specifying such imports.

--- a/packages/default-theme/package.json
+++ b/packages/default-theme/package.json
@@ -23,6 +23,7 @@
     "style/index.js"
   ],
   "style": "style/index.css",
+  "styleModule": "style/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jupyterlab/lumino.git"
