--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,28 +30,53 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
+        shell: bash
         run: |
+          set -eux
           npm install -g yarn
           yarn
 
-      - name: Build
+      - name: Build Source
+        shell: bash
         run: |
-            pushd packages/widgets
+            set -eux
             yarn build
-            yarn minimize
-            popd
-            yarn clean
-            yarn build
-            yarn minimize
             yarn build:test
 
-      - name: Tests
+      - name: Run Tests
         uses: GabrielBB/xvfb-action@v1
         with:
           run: |
             yarn test
 
-      - name: Docs
+      - name: Test Examples
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
+          set -eux
+          yarn minimize
+          yarn build:examples
+          yarn test:examples
+
+      - name: Build Docs
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          set -eux
+          yarn clean
           yarn docs
+
+      - name: Publish with Verdaccio
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          set -eux
+          # e.g refs/head/foo or refs/tag/bar
+          export BRANCH=$(echo ${GITHUB_REF} | cut -d'/' -f 3)
+          git fetch origin $BRANCH
+          git checkout $BRANCH
+          npm install -g verdaccio
+          verdaccio --config .github/scripts/verdaccio.yml &
+          npm set registry http://localhost:4873/
+          yarn config set registry http://localhost:4873/
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
+          yarn run version patch --no-push --yes
+          yarn run publish
