--- a/examples/example-accordionpanel/package.json
+++ b/examples/example-accordionpanel/package.json
@@ -7,16 +7,16 @@
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/datagrid": "^0.25.2",
-    "@lumino/default-theme": "^0.14.0",
-    "@lumino/dragdrop": "^1.10.0",
-    "@lumino/widgets": "^1.23.0",
+    "@lumino/default-theme": "^0.16.0",
+    "@lumino/messaging": "^1.7.0",
+    "@lumino/widgets": "^1.25.0",
     "es6-promise": "^4.0.5"
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "rimraf": "^2.5.2",
+    "source-map-loader": "0.2.4",
     "style-loader": "^1.0.2",
     "typescript": "~3.6.0",
     "webpack": "^4.41.3",
