--- a/packages/keyboard/tsconfig.json
+++ b/packages/keyboard/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleResolution": "node",
     "target": "ES5",
     "outDir": "lib",
-    "lib": ["ES5", "DOM", "ES2015.Iterable"],
+    "lib": ["ES5", "DOM", "ES2015.Collection", "ES2015.Iterable"],
     "importHelpers": true,
     "types": [],
     "rootDir": "src"
