--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:chrome": "lerna run test:chrome",
     "test:examples": "lerna run test --scope \"@lumino/example-*\"",
     "test:firefox": "lerna run test:firefox",
+    "test:firefox-headless": "lerna run test:firefox-headless",
     "test:ie": "lerna run test:ie --concurrency 1",
     "update:dependency": "update-dependency --lerna",
     "update:versions": "lerna version --no-push --no-git-tag-version"
