--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -40,15 +40,17 @@
     "clean:test": "rimraf tests/build",
     "docs": "typedoc --options tdoptions.json src",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
-    "test": "npm run test:firefox",
+    "test": "npm run test:firefox-headless",
     "test:chrome": "npm run test:nobrowser -- --browsers=Chrome",
     "test:chrome-headless": "npm run test:nobrowser -- --browsers=ChromeHeadless",
     "test:debug": "npm run test:debug:firefox",
     "test:debug:chrome": "npm run test:debug:nobrowser -- --browsers=Chrome",
     "test:debug:chrome-headless": "npm run test:debug:nobrowser -- --browsers=ChromeHeadless",
     "test:debug:firefox": "npm run test:debug:nobrowser -- --browsers=Firefox",
+    "test:debug:firefox-headless": "npm run test:debug:nobrowser -- --browsers=FirefoxHeadless",
     "test:debug:nobrowser": "cd tests && karma start --singleRun=false --debug=true --browserNoActivityTimeout=10000000 --browserDisconnectTimeout=10000000",
     "test:firefox": "npm run test:nobrowser -- --browsers=Firefox",
+    "test:firefox-headless": "npm run test:nobrowser -- --browsers=FirefoxHeadless",
     "test:ie": "npm run test:nobrowser -- --browsers=IE",
     "test:nobrowser": "cd tests && karma start",
     "watch": "tsc --build --watch"
