--- a/packages/algorithm/package.json
+++ b/packages/algorithm/package.json
@@ -55,6 +55,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-webkit-launcher": "^1.0.2",
     "mocha": "^9.0.3",
+    "playwright": "^1.26.0",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
     "rollup": "^2.77.3",
