--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -44,7 +44,7 @@
     "test:debug:nobrowser": "cd tests && karma start --singleRun=false --debug=true --browserNoActivityTimeout=10000000 --browserDisconnectTimeout=10000000",
     "test:firefox": "npm run test:nobrowser -- --browsers=Firefox",
     "test:firefox-headless": "npm run test:nobrowser -- --browsers=FirefoxHeadless",
-    "test:ie": "npm run test:nobrowser -- --browsers=IE",
+    "test:webkit": "cd tests && karma start --browsers=Webkit",
     "test:nobrowser": "cd tests && karma start",
     "watch": "tsc --build --watch"
   },
@@ -80,6 +80,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-webkit-launcher": "^1.0.2",
     "mocha": "^9.0.3",
+    "playwright": "^1.26.0",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
     "rollup": "^2.77.3",
