--- a/.github/workflows/license-header.yml
+++ b/.github/workflows/license-header.yml
@@ -41,7 +41,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v34.3.2
         with:
-          base_sha: 'HEAD~1'
+          since_last_remote_commit: "true"
           sha: 'HEAD'
 
       - name: Push fixes
