--- a/examples/example-menubar/package.json
+++ b/examples/example-menubar/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@lumino/example-menubar",
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "build": "tsc && webpack",
     "clean": "rimraf build"
   },
   "dependencies": {
-    "@lumino/default-theme": "^0.22.5",
+    "@lumino/default-theme": "^0.22.6",
     "@lumino/messaging": "^1.10.3",
-    "@lumino/widgets": "^1.35.0",
+    "@lumino/widgets": "^1.36.0",
     "es6-promise": "^4.0.5"
   },
   "devDependencies": {
