--- a/packages/signaling/package.json
+++ b/packages/signaling/package.json
@@ -45,8 +45,7 @@
   },
   "dependencies": {
     "@lumino/algorithm": "^2.0.0-beta.0",
-    "@lumino/coreutils": "^2.0.0-beta.0",
-    "@lumino/properties": "^2.0.0-beta.0"
+    "@lumino/coreutils": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.6.0",
