--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@ docs/source/examples
 .jupyter_releaser_checkout
 .eslintcache
 .ipynb_checkpoints
+
+# yarn v2+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
