--- a/examples/example-dockpanel/package.json
+++ b/examples/example-dockpanel/package.json
@@ -11,7 +11,7 @@
     "@lumino/default-theme": "^2.1.1",
     "@lumino/dragdrop": "^2.1.1",
     "@lumino/messaging": "^2.0.0",
-    "@lumino/widgets": "^2.1.1"
+    "@lumino/widgets": "workspace:^"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.1",
