--- a/packages/datagrid/package.json
+++ b/packages/datagrid/package.json
@@ -26,8 +26,24 @@
     "api": "api-extractor run --local --verbose",
     "build": "npm run build:src && rollup -c",
     "build:src": "tsc --build",
+    "build:test": "npm run clean:test && tsc --build tests && cd tests && rollup -c",
     "clean": "rimraf ./lib && rimraf *.tsbuildinfo && rimraf ./types && rimraf ./dist",
+    "clean:test": "rimraf tests/lib tests/tsconfig.tsbuildinfo",
     "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
+    "test": "npm run test:firefox-headless",
+    "test:chrome": "npm run test:nobrowser -- --browsers=Chrome",
+    "test:chrome-headless": "npm run test:nobrowser -- --browsers=ChromeHeadless",
+    "test:debug": "npm run test:debug:firefox",
+    "test:debug:chrome": "npm run test:debug:nobrowser -- --browsers=Chrome",
+    "test:debug:chrome-headless": "npm run test:debug:nobrowser -- --browsers=ChromeHeadless",
+    "test:debug:firefox": "npm run test:debug:nobrowser -- --browsers=Firefox",
+    "test:debug:firefox-headless": "npm run test:debug:nobrowser -- --browsers=FirefoxHeadless",
+    "test:debug:nobrowser": "cd tests && karma start --singleRun=false --debug=true --browserNoActivityTimeout=10000000 --browserDisconnectTimeout=10000000",
+    "test:firefox": "npm run test:nobrowser -- --browsers=Firefox",
+    "test:firefox-headless": "npm run test:nobrowser -- --browsers=FirefoxHeadless",
+    "test:webkit": "cd tests && karma start --browsers=Webkit",
+    "test:webkit-headless": "cd tests && karma start --browsers=WebkitHeadless",
+    "test:nobrowser": "cd tests && karma start",
     "watch": "tsc --build --watch"
   },
   "typedoc": {
@@ -50,6 +66,17 @@
     "@microsoft/api-extractor": "^7.6.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/chai": "^3.4.35",
+    "@types/mocha": "^2.2.39",
+    "chai": "^4.3.4",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.1",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-webkit-launcher": "^1.0.2",
+    "mocha": "^9.0.3",
+    "playwright": "^1.29.0",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
     "rollup": "^3.9.1",
