--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,6 +2,8 @@ version: 2
 
 build:
   os: ubuntu-22.04
+  tools:
+    python: "mambaforge-22.9"
 conda:
   environment: docs/environment.yml
 sphinx:
